[gd_scene load_steps=6 format=3 uid="uid://s5xw8m1ptgdq"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/themes/windows_95_theme.tres" id="1_8wqna"]
[ext_resource type="Script" uid="uid://du7g6y35nj384" path="res://components/apps/sigma_mail/sigma_mail.gd" id="2_wwi5a"]
[ext_resource type="Texture2D" uid="uid://c3tog5y8fjq0c" path="res://assets/logos/Lost in south.png" id="3_unqnx"]
[ext_resource type="Texture2D" uid="uid://b471ke68etlp5" path="res://assets/logos/SigmaMailx64.png" id="3_wwi5a"]
[ext_resource type="FontFile" uid="uid://2gcfbogatx7a" path="res://assets/fonts/GALSB.ttf" id="4_l4inh"]

[node name="SigmaMailWindow" type="MarginContainer"]
auto_translate_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_8wqna")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("2_wwi5a")
window_title = "Σ-Mail"
window_icon = ExtResource("3_wwi5a")
default_window_size = Vector2(800, 480)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_l4inh")
theme_override_font_sizes/font_size = 28
text = "Σ-Mail"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_unqnx")
expand_mode = 2
stretch_mode = 5

[node name="Panel" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Controls" type="HBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchBar" type="LineEdit" parent="HBoxContainer/Panel/MarginContainer/VBox/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"

[node name="LimitOption" type="OptionButton" parent="HBoxContainer/Panel/MarginContainer/VBox/Controls"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inbox" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Pagination" type="HBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PrevButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBox/Pagination"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Prev"

[node name="PageLabel" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBox/Pagination"]
unique_name_in_owner = true
layout_mode = 2
text = "Page 1/1"

[node name="NextButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBox/Pagination"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Next"
